k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: gke-terra
spec:
  type: LoadBalancer
  selector:
    app: myApp
  ports:
    - name: http-service
      protocol: TCP
      port: 80  #service's port (the outside world uses)
      targetPort: http-container  # points to the deployment.yaml port (container port)
